--- a/project.yml
+++ b/project.yml
@@ -14,4 +14,6 @@ packages:
         parameters: {}
         environment: {}
         annotations: {}
-        limits: {}
+        limits:
+          timeout: 120000
+          memory: 256
